Testing for deployment

--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -13,6 +13,7 @@ body {
 
 .main-section {
   padding: 0 !important;
+  margin-bottom: 5rem;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
