--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
                 your day, come rain or shine, and stay ahead of changing weather patterns with our intuitive search
                 interface.
             </p>
-            <form action="/" method="POST" class="box-form">
+            <form action="/main" method="POST" class="box-form">
                 <input type="text" name="location" id="location-inp" placeholder="Search your City" required
                     autocomplete="off">
                 <button class="btn">
