--- a/public/css/main-style.scss
+++ b/public/css/main-style.scss
@@ -15,6 +15,7 @@ body {
 
 .main-section {
     padding: 0 !important;
+    margin-bottom: 5rem;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
