--- a/public/css/main-style.scss
+++ b/public/css/main-style.scss
@@ -9,6 +9,7 @@
 }
 
 body {
+    min-height: 100vh;
     background-color: #011024;
     padding: 0 !important;
 }
@@ -24,22 +25,20 @@ body {
     gap: 2rem;
 
     .main-up {
-        // background-color: #15BFF6;
-        background-color: #319dfb;
-        border-bottom-right-radius: 20px;
-        border-bottom-left-radius: 20px;
+        background-color: #15BFF6;
+        // background-color: #319dfb;
+        border-bottom-right-radius: 25px;
+        border-bottom-left-radius: 25px;
         box-shadow: 0px 23px 25px -7px rgba(10, 77, 161, 0.66);
         color: #F5F5F5;
         min-width: 93vw;
         padding: 2rem;
-        // border-radius: 2rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
         gap: 1rem;
 
         .section1 {
-            // border: 1px solid red;
             display: flex;
             justify-content: space-around;
 
@@ -69,7 +68,6 @@ body {
                 display: flex;
                 padding: 0 10rem;
                 gap: 1.5rem;
-                // border: 1px solid red;
                 justify-content: space-between;
                 align-items: center;
 
@@ -80,7 +78,6 @@ body {
             }
 
             .reload {
-                cursor: pointer;
                 border: 1px solid #F5F5F5;
                 width: 40px;
                 height: 40px;
@@ -88,53 +85,28 @@ body {
                 display: flex;
                 justify-content: center;
                 align-items: center;
+
+                i {
+                    cursor: pointer;
+                }
             }
         }
 
         .section2 {
-            // border: 1px solid green;
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 3.5rem;
-            // border: 1px solid red;
             position: relative;
             transition: .2s all ease-in-out;
 
-            .img-shadow {
-                top: 30%;
-                left: 35%;
-                position: absolute;
-                // border: 1px solid red;
-                height: 1px;
-                width: 1px;
-                // box-shadow: 83px 95px 105px 57px rgba(0, 0, 0, 1);
-                box-shadow: 64px 84px 109px 52px rgba(72, 73, 74, 1);
-                box-shadow: 47px 73px 77px 40px rgba(72, 73, 74, 1);
-                animation: anii 1.5s linear infinite alternate;
-            }
-
-            @keyframes anii {
-                from {
-                    transform: translatey(-10px);
-                }
-
-                to {
-                    transform: translatey(0);
-                }
-            }
-
             .icon {
-                // border: 1px solid white;
-                // display: flex;
-                // justify-content: center;
-                // align-items: center;
-                z-index: 9;
                 transition: .2s all ease-in-out;
 
                 img {
                     width: 180px;
                     animation: ani 1.1s linear infinite alternate;
+                    filter: drop-shadow(19px 13px 20px rgba(72, 73, 74, .9));
                 }
 
                 @keyframes ani {
@@ -152,7 +124,6 @@ body {
                 display: flex;
                 flex-direction: column;
                 gap: .15rem;
-                z-index: 9;
 
                 .city-name {
                     font-weight: 500;
@@ -166,8 +137,7 @@ body {
                     h2 {
                         font-size: 4.2rem;
                         font-weight: 500;
-                        // text-shadow: 4px 3px 4px rgba(202, 202, 202, 1);
-                        text-shadow: -3px 2px 2px rgba(205, 201, 201, 0.86);
+                        text-shadow: 3px 2px 2px rgba(205, 201, 201, 0.6);
 
                         span {
                             font-size: 2rem;
@@ -185,7 +155,6 @@ body {
         }
 
         .section3 {
-            // border: 1px solid red;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -217,7 +186,6 @@ body {
     }
 
     .main-down {
-        // border: 1px solid red;
         color: aliceblue;
         margin-top: 2rem;
         min-width: 70vw;
@@ -229,14 +197,9 @@ body {
             margin-bottom: .3rem;
         }
 
-        .main-down-line {
-            height: 1px;
-            width: 27%;
-            background-color: #f5f5f5c0;
-            margin-bottom: 1rem;
-        }
 
         p {
+            margin-top: 1.5rem;
             padding: 0 1.5rem;
             font-weight: 300;
             letter-spacing: 1px;
@@ -250,4 +213,213 @@ body {
 .error {
     display: flex;
     align-items: center;
+}
+
+// ************* media queries ************
+
+@media (max-width: 648px) {
+    .main-section {
+
+        .main-up {
+            gap: 3rem !important;
+            border-bottom-right-radius: 30px;
+            border-bottom-left-radius: 30px;
+            max-width: 85vw;
+        }
+
+        .section1 {
+
+            .date {
+                display: flex;
+                padding: 0rem !important;
+                gap: .5rem !important;
+                justify-content: center;
+                align-items: center;
+
+                p {
+                    font-size: 1.1rem !important;
+                    font-weight: 300;
+                }
+            }
+        }
+
+        .section2 {
+            gap: 1rem !important;
+
+            .icon {
+                img {
+                    width: 140px !important;
+                }
+            }
+
+            .temp {
+
+                .city-name {
+                    font-weight: 400;
+                }
+
+                .temperature {
+                    gap: .5rem !important;
+
+                    h2 {
+                        font-size: 3.9rem !important;
+
+                        span {
+                            font-size: 1.8rem !important;
+                        }
+                    }
+                }
+            }
+        }
+
+        .section3 {
+            .line {
+                width: 70% !important;
+            }
+        }
+
+        .main-down {
+            max-width: 80vw;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .main-section {
+        .main-up {
+            gap: 2.5rem !important;
+
+            .section1 {
+
+                .back-icon {
+                    width: 30px;
+                    height: 30px;
+
+                    .back {
+
+                        i {
+                            font-size: 10px;
+                        }
+                    }
+                }
+
+                .date {
+                    lord-icon {
+                        width: 33px !important;
+                        height: 33px !important;
+                    }
+
+                    gap: 0.2rem !important;
+
+                    p {
+                        font-size: 1rem !important;
+                        font-weight: 300;
+                    }
+                }
+
+                .reload {
+                    width: 30px;
+                    height: 30px;
+
+                    i {
+                        font-size: 10px;
+                    }
+                }
+            }
+
+            .section2 {
+
+                .icon {
+                    img {
+                        width: 110px !important;
+                    }
+                }
+
+                .temp {
+                    gap: 1rem !important;
+
+                    .city-name {
+                        font-size: 1rem;
+                        font-weight: 300 !important;
+                    }
+
+                    .temperature {
+                        gap: .5rem !important;
+                        flex-direction: column;
+
+                        h2 {
+                            font-size: 2.7rem !important;
+
+                            span {
+                                font-size: 1.2rem !important;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .section3 {
+                gap: 1rem;
+
+                .line {
+                    width: 80% !important;
+                }
+
+                .sec3-content {
+                    margin-top: 1rem;
+
+                    .elem {
+                        text-align: center;
+                        font-size: 1rem !important;
+                        font-weight: 100;
+
+                        span {
+                            font-size: .8rem !important;
+                            font-weight: 300;
+                        }
+                    }
+                }
+            }
+        }
+
+        .main-down {
+
+            h2 {
+                font-size: 1.5rem;
+                font-weight: 400;
+                margin-bottom: .3rem;
+            }
+
+
+            p {
+                margin-top: 1.5rem;
+                padding: 0 1rem;
+                font-weight: 200;
+                letter-spacing: 1px;
+                line-height: 1.7rem;
+            }
+        }
+    }
+}
+
+@media (max-width: 400px) {
+    .main-section {
+        .main-up {
+
+            .section2 {
+                .temp {
+                    p {
+                        display: flex;
+                        flex-direction: column;
+                    }
+                }
+            }
+
+            .section3 {
+                .sec3-content {
+                    gap: 3rem !important;
+                }
+            }
+        }
+    }
 }
